2006-10-16  Andreas Kupries <andreask@activestate.com>

	*** 8.5a5 TAGGED FOR RELEASE ***

	* doc/WindowId.3: Pat's commit on 2006-10-08 broke the .SH NAME
	  information across several lines, breaking the cross-linking of
	  manpages during installation for this one. Put everything back
	  on a single line, unbreaking it.

2006-10-16  Daniel Steffen  <das@users.sourceforge.net>

	* changes: updates for 8.5a5 release.

	* macosx/tkMacOSXDraw.c: fix numerous issues in CG and QD drawing procs
	so that they now match X11 drawing much more closely [Bug 1558051];
	use Tiger ellipse drawing API when available; fix comments & whitespace.

	* macosx/tkMacOSXInit.c: set default linewidth limit for CG
	antialiasing to 0 as thin horizontal/vertical lines look good now.
	* macosx/README: document CG antialiasing limit changes.

	* generic/tkCanvLine.c (ConfigureLine):     on TkAqua, pass outline
	* generic/tkCanvPoly.c (ConfigurePolygon):  linewidth in gc even for
	* generic/tkRectOval.c (ConfigureRectOval): fills (as it controls AA).

	* macosx/GNUmakefile: don't redo prebinding of non-prebound binaires.

	* library/demos/pendulum.tcl: fix incorrect setting of toplevel title.

2006-10-10  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.5a5 release

2006-10-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkWindow.c:  Implemented tip #264 - Tk_Interp function.
	* doc/WindowId.3:      Documented Tk_Interp.
	* generic/tk.decls:    Added to the stubs interface and 
	* generic/tkDecls.h:   regenerated.
	* generic/tkStubsInit.c:

2006-10-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixFont.c (Ucs2beToUtfProc, UtfToUcs2beProc):
	(TkpFontPkgInit, encodingAliases): Correct alignment issues in
	encoding conversion.  Call ucs-2be "unicode" on big-endian
	systems. [Bug 1122671]

2006-09-27  Andreas Kupries  <andreask@activestate.com>

	* unix/Makefile.in (install-binaries): Added a second guard to the